Aktualizacja JQuery do wersji 3.3

--- a/saper/saper.html
+++ b/saper/saper.html
@@ -5,7 +5,7 @@
     <title>CSS ZEN SAPER</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="saper.css" />
-    <script src="jquery-3.1.1.js"></script>
+    <script src="jquery.js"></script>
     <script src="saper.js"></script>
 </head>
 
